// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty stack 1`] = `Array []`;

exports[`output includes all synthesized resources 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Resource1",
    "metadata": Object {
      "name": "test-resource1-c85cb0fc",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Resource2",
    "metadata": Object {
      "name": "test-resource2-c8c6bd27",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Resource3",
    "metadata": Object {
      "name": "test-resource3-c8ccc739",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Resource1",
    "metadata": Object {
      "name": "test-scope-resource1-c84ac5c2",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Resource2",
    "metadata": Object {
      "name": "test-scope-resource2-c889750d",
    },
  },
]
`;

exports[`synthesizeManifest() can be used to synthesize a specific chart 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Kind1",
    "metadata": Object {
      "name": "chart-obj1-c80aa35c",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Kind2",
    "metadata": Object {
      "name": "chart-obj2-c8016fab",
    },
  },
]
`;

exports[`tokens are resolved during synth 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Resource1",
    "metadata": Object {
      "name": "test-resource1-c85cb0fc",
    },
    "spec": Object {
      "foo": 123,
      "implicitToken": Object {
        "foo": "bar",
      },
    },
  },
]
`;
